[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "The repomon server"
documentation = "http://docs.rs/repomons"
homepage = "http://docs.rs/repomons"
keywords = ["git", "repository", "monitor", "server"]
license = "MIT/Apache-2.0"
name = "repomons"
readme = "README.md"
repository = "https://github.com/rustyhorde/repomons"
version = "0.1.0"

[dependencies]
bincode = "0.9.2"
clap = "2.29.0"
error-chain = "0.11.0"
futures = "0.1.17"
git2 = "0.6.9"
repomon = "0.1.0"
tokio-core = "0.1.11"
tokio-io = "0.1.4"
toml = "0.4.5"
rand = "0.4.1"
