[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "The repomon server"
documentation = "http://docs.rs/repomons"
homepage = "http://docs.rs/repomons"
keywords = ["git", "repository", "monitor", "server"]
license = "MIT/Apache-2.0"
name = "repomons"
readme = "README.md"
repository = "https://github.com/rustyhorde/repomons"
version = "0.1.0"

[dependencies]
bincode = "0.9.2"
clap = "2.29.0"
error-chain = "0.11.0"
futures = "0.1.17"
getset = "0.0.5"
git2 = "0.6.9"
lazy_static = "1"
repomon = "0.1.0"
slog-async = "2.2.0"
slog-term = "2.3.0"
term = "0.4.6"
tokio-core = "0.1.11"
tokio-io = "0.1.4"
toml = "0.4.5"
rand = "0.4.1"
uuid = { version = "0.5.1", features = ["serde", "use_std", "v4" ] }
slog-try = "0.1.0"

[dependencies.slog]
features = ["max_level_trace", "release_max_level_trace"]
version = "2"

[patch.crates-io]
repomon = { path = '../repomon' }
